@@ -1,1 +1,2 @@
 obj-y := init.o
+obj-y += fault.o
